--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "heroku-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "server": "nodemon server.js"
-    
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lorilewis/heroku-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lorilewis/heroku-app/issues"
-  },
-  "homepage": "https://github.com/lorilewis/heroku-app#readme",
-  "dependencies": {
-    "express": "^4.16.4",
-    "mongoose": "^5.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.11"
-  }
+	"name": "deploy-mern-on-heroku",
+	"version": "0.0.1",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Lori Lewis",
+	"license": "MIT",
+	"dependencies": {
+		"express": "^4.16.3",
+		"mongoose": "^5.3.2"
+	},
+	"devDependencies": {
+		"nodemon": "^1.18.4"
+	}
 }
